--- a/src/assets/styles/utilities.scss
+++ b/src/assets/styles/utilities.scss
@@ -33,6 +33,12 @@
   margin-bottom: 30px;
 }
 
+.u-margin-bottom-gt-sm {
+  @media (min-width: $screen-sm) {
+      margin-bottom: 30px;
+  }
+}
+
 .u-margin-bottom-50 {
   margin-bottom: 70px;
 }
